# Mike-Aur-Donnaoss

./: .env.example  .gitignore  .taurignore  AGENT_TIGHTENING_PROMPT.md  CASES_BEAUTIFICATION_PROMPT.md  Cargo.toml  FIX_LOOPS.md  INTERACTIVE_ANALYSIS_PROMPT.md  LOOP_PLAN.md  QWEN.md  README.md  REVIEW_FINDINGS.md  SETUP.md  rustc_wrapper.sh
.devcontainer/: devcontainer.json  setup.sh
docs/: CACHE.md  CORPORA.md  DOCX.md  EURLEX_REGISTRATION.md  FEATURE_LOOPS.md  LITIGATION_RISK_RUBRIC.md  LITIGATION_RISK_RUBRIC_PROMPT_BLOCK.md  MANUAL.md  PANDOC_LOOPS.md  QWEN.md  SESSION_RECAP.md
finetune/: Modelfile  README.md
finetune/pipeline/: build_sft.py  check_gpu.py  check_template.py  eval_gate.py  introspect_api.py  make_candidates.py  merge_export.py  prep_drafting_rewrite.py  print_batch.py  token_analysis.py  train.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  hi-Latn.json  hi.json
frontend/scripts/: build-tauri.js
frontend/src/app/: _dashboard-layout.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/account/: layout.tsx  page.tsx
frontend/src/app/account/case-search/: page.tsx
frontend/src/app/account/eurlex/: page.tsx
frontend/src/app/account/italia-legale/: page.tsx
frontend/src/app/account/knowledge/: page.tsx
frontend/src/app/account/mcp/: page.tsx
frontend/src/app/account/models/: page.tsx
frontend/src/app/account/personalization/: page.tsx
frontend/src/app/account/statutes/: page.tsx
frontend/src/app/account/sync/: page.tsx
frontend/src/app/account/telegram/: page.tsx
frontend/src/app/assistant/: layout.tsx  page.tsx
frontend/src/app/assistant/chat/: page.tsx
frontend/src/app/assistant/clarify-preview/: page.tsx
frontend/src/app/case-search/: layout.tsx  page.tsx
frontend/src/app/cases/: layout.tsx  page.tsx
frontend/src/app/cases/[id]/: AnalysisStatsBar.tsx  InsightFeed.tsx  ProgressChecklist.tsx  RegistryTab.tsx  page-client.tsx  page.tsx
frontend/src/app/cases/view/: StuckStateRescue.tsx  analysisConstants.ts  page-client.tsx  page.tsx  useReassuranceInjector.ts
frontend/src/app/contexts/: ChatHistoryContext.tsx  SidebarContext.tsx
frontend/src/app/data/: thinkingSnippets.ts
frontend/src/app/hooks/: useAssistantChat.ts  useDocumentVersions.ts  useFetchDocxBytes.ts  useFetchSingleDoc.ts  useGenerateChatTitle.ts  useNetworkOnline.ts  useOfflineMode.ts  useSelectedModel.ts
frontend/src/app/lib/: mikeApi.ts  modelAvailability.ts
frontend/src/app/login/: page.tsx
frontend/src/app/messy-docx/: layout.tsx  page.tsx
frontend/src/app/projects/: layout.tsx  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/tabular-reviews/: layout.tsx  page.tsx
frontend/src/app/workflows/: layout.tsx  page.tsx
frontend/src/components/: providers.tsx  site-logo.tsx
frontend/src/components/ui/: cite-button.tsx  dropdown-menu.tsx  text-search-widget.tsx
frontend/src/contexts/: AuthContext.tsx  UserProfileContext.tsx
frontend/src/i18n/: actions.ts  config.ts  request.ts
frontend/src/lib/: auth.ts  fileConverter.ts  label.ts  slug.ts  storage.ts  supabase-server.ts  supabase.ts  types.ts  vanga-search.ts
frontend/src/scripts/: convert-courts-to-ts.js
migrations/: 0001_initial.sql  0002_tabular_workflow_hidden.sql  0003_user_settings_extend.sql  0004_mcp_servers.sql  0005_user_locale.sql  0006_user_gemini_region.sql  0007_user_gemini_model.sql  0008_sync_folders.sql  0009_rag_scopes.sql  0010_workflows_extend.sql  0011_doc_chunks_page.sql  0012_messages_annotations.sql  0013_documents_chat_id.sql  0014_documents_cache_hash.sql  0015_documents_corpus.sql  0016_italian_legal.sql  0017_document_edits.sql  0031_cases.sql  0032_personalization.sql  0033_preferences_v2.sql  0034_ecourts_verifications.sql  0035_document_page_count.sql  0036_chats_case_id.sql  0037_statute_db.sql  0038_drafting_registry.sql  0039_firm_corpus.sql  0040_limitation_seed.sql  0041_mike_harness.sql  0042_chats_kind.sql  0043_corpus_chunks_vec.sql  0044_corpus_profiles.sql  0045_markdown_drafts.sql  0046_statute_seed.sql  0047_corpus_settings_ik_key.sql  0048_document_versions_message_id.sql  0049_corpus_batches.sql
mockups/: clarification-inline-concepts.html  clarification-palettes.html  clarification-redesign.html  design-language.html  drafting-editor.html  drafting-studio.html
scripts/: setup.ps1  setup.sh  swarm.sh
services/gliner/: app.py  requirements.txt
src/: lib.rs  main.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/pandoc/: .gitignore
src-tauri/pdfium/: .gitignore
src-tauri/src/: lib.rs  main.rs
src/agents/: mod.rs
src/agents/case_prep/: mod.rs  orchestrator.rs  outputs.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  session.rs
src/corpora/: eurlex.rs  italian_legal.rs  mod.rs
src/corpus/: chunker.rs  ingest.rs  mod.rs  tools.rs
src/db/: mod.rs
src/drafting/: citations.rs  crossrefs.rs  mod.rs  registry.rs
src/embeddings/: service.rs
src/harness/: mod.rs
src/llm/: aws_verification.rs  builtin_tools.rs  claude.rs  gemini.rs  hyde.rs  kanoon_tool.rs  local.rs  mod.rs  oneshot.rs  statute_tool.rs  summarize.rs  types.rs
src/mikeprj/: crypto.rs  io.rs
src/pdf/: docx_writer.rs  md_pdf.rs  mod.rs  pandoc.rs
src/pii/: anonymizer.rs  mod.rs  scrubber.rs
src/preferences/: mod.rs
src/routes/: auth.rs  cases.rs  chat.rs  corpus.rs  desktop.rs  documents.rs  ecourts.rs  eurlex.rs  indian_kanoon.rs  italian_legal.rs  messy_doc.rs  mike_feedback.rs  mod.rs  personalization.rs  projects.rs  statutes.rs  sync.rs  user.rs
src/storage/: mod.rs
src/sync/: scanner.rs
telegram-bot/: .env.example  Cargo.toml  README.md
telegram-bot/assets/: README.md
telegram-bot/src/: main.rs
tests/: corpus_bulk_ingest.rs  corpus_ingest_profile.rs  corpus_semantic_search.rs  demo_prompts.py  save_markdown_integrity.rs  workflows_smoke.rs
training/: augment_data.py  create_pairs.py  filter_quality.py  prepare_data.py  requirements.txt  scrub_pii.py
(+97 files in other folders)
