[package]
name = "mike-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "mike_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mike-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
mike = { path = "..", features = ["pdf", "rag", "tesseract"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
# Cross-platform launcher for the system default browser. Used by
# the `open_external_url` Tauri command so links from the in-app
# WebView land in Edge/Chrome/Safari instead of being intercepted
# by the WebView itself (which makes the in-app shell behave like a
# mini-browser, not what the user wants for "Apri su EUR-Lex").
open = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Security_Credentials",
    "Security_Credentials_UI",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }
windows-future = "0.2"
